# mcp-pdf-reader

./: .env.example  README.md  pyproject.toml
examples/: example_usage.md
src/mcp_pdf_reader/: __init__.py  server.py
tests/: test_server.py
