[project]
name = "mcp-pdf-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonis Geralis", email = "b3lievem@yandex.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.5",
    "pymupdf>=1.26.5",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

